[package]
name = "watchdog_utils"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
base64 = "0.22.1"
regex = "1.11.1"
reqwest = { version = "0.12.15", features = ["json"] }
serde = {version= "1.0.219" , features = ["derive"] }
serde_json = "1.0.140"
toml = "0.8.20"
log = "0.4"
clap = { version = "4", features = ["derive"] }
